--- a/src/pages/signupcliente/styles.module.css
+++ b/src/pages/signupcliente/styles.module.css
@@ -6,7 +6,7 @@
     flex-direction: column;
 }
 
-.login{
+.cadastro{
     margin-top: 2rem;
     width: 600px;
     display: flex;
@@ -28,16 +28,8 @@
     padding-bottom: 1rem;
 }
 
-.button{
-    box-sizing: border-box;
-    width: 100%;
-    height: 30px;
-    left: 890px;
-    top: 775px;
-
-    background: #FFD666;
-    border: 1px solid #D3E2E5;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 8px;
+.text {
+    margin-top: 1rem;
+    color: #FFF;
+    cursor: pointer;
 }
-
