--- a/src/pages/tipoconta/styles.module.css
+++ b/src/pages/tipoconta/styles.module.css
@@ -6,3 +6,9 @@
     flex-direction: column;
     min-height: 100vh;
 }
+
+.titulo{
+    font-size: 20px;
+    color: #fff;
+    margin-bottom: 20px;
+}
