--- a/src/pages/dashboard/admin/styles.module.css
+++ b/src/pages/dashboard/admin/styles.module.css
@@ -4,7 +4,7 @@
     height: 600px;
     left: 50vh;
     top: 26px;
-    background: linear-gradient(329.54deg, #15B6D6 0%, #15D6D6 100%);
+    background: rgb(255,255,255);
     border-radius: 20px;
 }
 
