--- a/src/pages/signin/styles.module.css
+++ b/src/pages/signin/styles.module.css
@@ -1,4 +1,4 @@
-.container{
+/* .container{
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -43,4 +43,4 @@
     .login {
         width: 90%
     }
-}
+} */
