--- a/src/pages/gerenciarservicos/styles.module.css
+++ b/src/pages/gerenciarservicos/styles.module.css
@@ -20,15 +20,50 @@
     padding-right: 3rem;
 }
 
-.publicacoes{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 50vh;
+/* ----------- Styles do map  */
+
+.publicacoesCarrossel{
+    display: flex;    
+    overflow: scroll;
+    scroll-behavior: smooth;    
+    margin-right: 3rem;
 }
 
+.publicacoesCarrossel::-webkit-scrollbar{
+    display: none;
+}
 
-/* ------------------------ publicacao_id */ 
+.publicacoes{
+    justify-content: center;
+    align-items: flex-start;
+    max-height: 50vh;
+    background-color: rgba(255,255,255,0.70);
+    margin-top: 4rem;
+    border-radius: 16px;
+    margin-left: 2rem;    
+    border: 1px solid black;
+    padding: 2rem 1rem 2rem 1rem;
+    width: 380px;
+    flex:none
+}
+
+.tipoServicoText{
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.itemsSubTitles{
+    font-weight: bold;
+    font-size: 18px;
+    margin-top: 1rem;
+}
+
+.buttons{
+    text-align: center;
+    margin-top: 3rem;
+}
+
+/* ------------------------ Styles do arquido - [publicacao_id].tsx */ 
 
 .titulo{
     font-size: 20px;
@@ -101,12 +136,3 @@
     margin-left: 3rem;
 }
 
-/* ----------- Styles do map do arquivo Index */
-
-.servicosContainer {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    margin-right: 1rem;
-}
