--- a/src/pages/contratar/categoria/[categoria_id]/perfis/[perfis_id]/perfil/styles.module.css
+++ b/src/pages/contratar/categoria/[categoria_id]/perfis/[perfis_id]/perfil/styles.module.css
@@ -3,7 +3,7 @@
     max-width: 900px;
     margin-left: 500px;    
     min-height: 50vh;
-    padding-bottom: 20rem;
+    padding-bottom: auto;
     display: flex;
     justify-content: center; 
     border-radius: 8px;
@@ -61,6 +61,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    margin-bottom: 2rem;
 }
 
 .itemsServicosPrestados{
@@ -77,4 +78,5 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    margin-bottom: 2rem;
 }
