--- a/src/pages/servicoscontratados/styles.module.css
+++ b/src/pages/servicoscontratados/styles.module.css
@@ -45,25 +45,14 @@
     align-items: flex-start;        
 }
 
-.buttonContainer{
+.buttonFinalizarContainer{
     display: flex;
     justify-content: flex-start;
     margin: 1rem;
     
 }
 
-.buttonFinalizar{ 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #FFD666;
-    color: #8D734B;
-    border: 1px solid #D3E2E5;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 8px;
-    width: 130px;
-    height: 35px;
-    font-weight: bold; 
-    font-size: 14px;
-    cursor: pointer;
+.buttonFinalizar:hover{ 
+    background-color: #29B6D1;
+    color: #fff;
 }
