Edição e exclusão de tipos de serviços e categorias criados

--- a/src/pages/perfil/styles.module.css
+++ b/src/pages/perfil/styles.module.css
@@ -68,6 +68,11 @@
     font-weight: 600;
 }
 
+.linhaHorizontal{
+    width: 90%;
+    border: 1px solid #000;
+}
+
 .cardDadosDaConta{
     margin-top: 1rem;
     height: 140px;
