--- a/src/pages/gerenciarservicos/styles.module.css
+++ b/src/pages/gerenciarservicos/styles.module.css
@@ -1,6 +1,6 @@
 .container {
     max-width: 720px;
-    height: 750px;
+    height: auto;
     background-color: #fff;
     margin-left: 550px;
     border-radius: 20px;
@@ -22,29 +22,44 @@
 
 /* ----------- Styles do map  */
 
-.publicacoesCarrossel{
+.cardContainer{
     display: flex;    
-    overflow: scroll;
-    scroll-behavior: smooth;    
-    margin-right: 3rem;
+    flex-direction: column;
+    width: 86%;
+    margin-top: 1rem;
+    padding-bottom: 2rem;
 }
 
-.publicacoesCarrossel::-webkit-scrollbar{
-    display: none;
+.card{    
+    padding: 1rem;
+    margin-left: 3rem;
+    margin-top: 1rem;
+    height: auto;
+    border: 1px black solid;
+    border-radius: 20px;
+    width: 100%;
 }
 
-.publicacoes{
-    justify-content: center;
-    align-items: flex-start;
-    max-height: 50vh;
-    background-color: rgba(255,255,255,0.70);
-    margin-top: 4rem;
-    border-radius: 16px;
-    margin-left: 2rem;    
-    border: 1px solid black;
-    padding: 2rem 1rem 2rem 1rem;
-    width: 380px;
-    flex:none
+.titleFiEditContainer{
+    display: flex;
+    justify-content: space-between;
+}
+
+.linhaHorizontal{    
+    width: 100%;
+    border: 0.5px solid #1d1d2e;
+    margin-bottom: 1rem;
+}
+
+.servicosAgendaContainer{
+    display: flex;
+    flex-flow: row wrap;
+    
+}
+
+.servicosAgenda{
+    width: 50%;
+    margin-bottom: 0.5rem
 }
 
 .tipoServicoText{
@@ -63,82 +78,4 @@
     margin-top: 3rem;
 }
 
-/* ------------------------ Styles do arquido - [publicacao_id].tsx */ 
-
-.titulo{
-    font-size: 20px;
-    padding-left: 3rem;
-    padding-top: 4rem;
-    font-weight: 600;
-    display: flex;
-    justify-content: space-between;
-}
-
-.form{
-    display: flex;
-    flex-direction: column;
-    margin: 1rem 0;
-}
-
-.select{
-    margin-left: 3rem;
-    margin-bottom: 1rem;
-    height: 55px;
-    width: 85%;
-    border: 0;
-    border-radius: 0.5rem;
-    background-color: #1d1d2e;
-    color: #fff;
-    padding: 1rem;
-}
-
-.descricao{
-    margin-top: 0.5rem;
-    border-radius: 0.3rem;
-    margin-bottom: 1rem;
-    margin-left: 3rem;
-    min-height: 120px;
-    resize: none;
-    padding: 0.5rem;
-    width: 85%;
-    color: #fff;
-    background-color: #1d1d2e;    
-}
-
-.inputContainer{
-    display: flex;
-    justify-content: space-between;    
-    max-width: 92%;
-}
-
-.input{
-    margin-top: 0.5rem;
-    border-radius: 0.3rem;
-    margin-bottom: 1rem;
-    margin-left: 3rem;
-    padding: 0.5rem;
-    width: 100%;
-    color: #fff;
-    background-color: #1d1d2e;    
-}
-
-.botoes{
-    display: flex;
-    width: 92%;
-}
-
-.datePicker{    
-    top: 1rem;
-    left: 3rem;
-    width: 100%;
-}
-
-/* ----------------- Items */
-
-.items {
-    display: flex;
-    justify-content: space-between;
-    width: 85%;
-    margin-left: 3rem;
-}
 
