Funcionalidade de editar uma publicação finalizada

--- a/src/pages/gerenciarservicos/cadastrar/styles.module.css
+++ b/src/pages/gerenciarservicos/cadastrar/styles.module.css
@@ -16,6 +16,14 @@
     justify-content: space-between;
 }
 
+.subtitle{
+    display: flex;
+    padding-left: 3rem;
+    margin-top: 1rem;
+    font-size: 18px;
+    font-weight: 500;
+}
+
 .form{
     display: flex;
     flex-direction: column;
@@ -64,9 +72,37 @@
     background-color: #1d1d2e;    
 }
 
+.inputDatePickerContainer{
+    display: flex;
+    justify-content: space-between;    
+    max-width: 92%;
+}
+
+.datePickerContainer{
+    width: 45%;
+}
+
+.btnAddAgendaContainer{
+    width: 26%;
+    margin-top: 1rem;
+    margin-right: 2rem;
+}
+
+.inputAddAgenda{
+    margin-top: 0.5rem;
+    border-radius: 0.3rem;
+    margin-bottom: 1rem;
+    margin-left: 2rem;
+    padding: 0.5rem;
+    width: 100%;
+    color: #fff;
+    background-color: #1d1d2e; 
+}
+
 .botoes{
     display: flex;
     width: 92%;
+    margin-top: 1rem;
 }
 
 .datePicker{    
@@ -77,10 +113,15 @@
 
 /* ----------------- Items */
 
-.items {
+.listaDeServicosAgendas {
     display: flex;
     justify-content: space-between;
     width: 85%;
+    color: #fff;
+    background-color: #1d1d2e;    
+    border: 1px solid #1d1d2e;
+    border-radius: 8px;
+    padding: 4px 4px 4px 6px;
+    margin-bottom: 4px;
     margin-left: 3rem;
 }
-
