Correção de validações na tela de serviços pendentes. Integração com WhatsApp

--- a/src/pages/gerenciarservicos/styles.module.css
+++ b/src/pages/gerenciarservicos/styles.module.css
@@ -1,5 +1,6 @@
 .container {
     max-width: 720px;
+    min-height: 750px;
     height: auto;
     background-color: #fff;
     margin-left: 550px;
