Alter Player, imagens e carrosel feito(categorias)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,3 +6,9 @@ body{
 	@apply bg-[#29B6D1];
 	-webkit-font-smoothing: antialiased;
 }
+
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+}
