--- a/src/pages/gerenciarservicos/cadastrar/styles.module.css
+++ b/src/pages/gerenciarservicos/cadastrar/styles.module.css
@@ -37,7 +37,7 @@
     width: 85%;
     border: 0;
     border-radius: 0.5rem;
-    background-color: #1d1d2e;
+    background-color: #11A3BE;
     color: #fff;
     padding: 1rem;
 }
@@ -52,7 +52,7 @@
     padding: 0.5rem;
     width: 85%;
     color: #fff;
-    background-color: #1d1d2e;    
+    background-color: #11A3BE;    
 }
 
 .inputContainer{
@@ -69,7 +69,7 @@
     padding: 0.5rem;
     width: 100%;
     color: #fff;
-    background-color: #1d1d2e;    
+    background-color: #11A3BE;    
 }
 
 .inputDatePickerContainer{
