--- a/src/pages/gerenciarservicos/cadastrar/styles.module.css
+++ b/src/pages/gerenciarservicos/cadastrar/styles.module.css
@@ -96,7 +96,7 @@
     padding: 0.5rem;
     width: 100%;
     color: #fff;
-    background-color: #1d1d2e; 
+    background-color: #11A3BE; 
 }
 
 .botoes{
@@ -118,8 +118,8 @@
     justify-content: space-between;
     width: 85%;
     color: #fff;
-    background-color: #1d1d2e;    
-    border: 1px solid #1d1d2e;
+    background-color: #11A3BE;    
+    border: 1px solid #11A3BE;
     border-radius: 8px;
     padding: 4px 4px 4px 6px;
     margin-bottom: 4px;
