--- a/src/pages/gerenciarservicos/edit/styles.module.css
+++ b/src/pages/gerenciarservicos/edit/styles.module.css
@@ -38,7 +38,7 @@
     width: 85%;
     border: 0;
     border-radius: 0.5rem;
-    background-color: #1d1d2e;
+    background-color: #11A3BE;
     color: #fff;
     padding: 1rem;
 }
@@ -53,7 +53,7 @@
     padding: 0.5rem;
     width: 85%;
     color: #fff;
-    background-color: #1d1d2e;    
+    background-color: #11A3BE;    
 }
 
 .inputContainer{
@@ -69,8 +69,8 @@
     margin-left: 3rem;
     padding: 0.5rem;
     width: 100%;
-    color: #fff;
-    background-color: #1d1d2e;    
+    color: #ffff;
+    background-color: #11A3BE;    
 }
 
 .inputDatePickerContainer{
@@ -97,7 +97,7 @@
     padding: 0.5rem;
     width: 100%;
     color: #fff;
-    background-color: #1d1d2e; 
+    background-color: #11A3BE; 
 }
 
 .botoes{
@@ -119,8 +119,8 @@
     justify-content: space-between;
     width: 85%;
     color: #fff;
-    background-color: #1d1d2e;    
-    border: 1px solid #1d1d2e;
+    background-color: #11A3BE;    
+    border: 1px solid #11A3BE;
     border-radius: 8px;
     padding: 4px 4px 4px 6px;
     margin-bottom: 4px;
